--- a/package.json
+++ b/package.json
@@ -36,21 +36,21 @@
     "clean": "rm -rf dist .astro node_modules/.cache"
   },
   "dependencies": {
-    "astro": "^5.2.5",
     "@astrojs/react": "^4.2.0",
-    "@astrojs/tailwind": "^6.0.0",
     "@astrojs/sitemap": "^3.2.0",
+    "@astrojs/tailwind": "^6.0.0",
+    "@headlessui/react": "^2.2.4",
+    "@supabase/supabase-js": "^2.39.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.16",
-    "marked": "^12.0.0",
+    "astro": "^5.2.5",
+    "clsx": "^2.1.1",
     "highlight.js": "^11.9.0",
     "lucide-react": "^0.263.1",
-    "@headlessui/react": "^2.2.0",
-    "clsx": "^2.1.0",
-    "@supabase/supabase-js": "^2.39.0"
+    "marked": "^12.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.16"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
