--- a/netlify.toml
+++ b/netlify.toml
@@ -26,6 +26,7 @@
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://images.unsplash.com https://ui-avatars.com https://images.pexels.com; connect-src 'self' https://*.supabase.co;"
 
 [[headers]]
   for = "/assets/*"
