--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "kanedocs",
+  "name": "kodex",
   "type": "module",
   "version": "2.1.0",
   "private": true,
-  "description": "A modern documentation platform with integrated GitHub-like version control features",
-  "author": "KaneDocs Team",
+  "description": "A modern AI-powered documentation platform with integrated Git-like version control",
+  "author": "KODEX Team",
   "license": "MIT",
-  "homepage": "https://kanedocs.netlify.app",
+  "homepage": "https://kodex.netlify.app",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/kanedocs.git"
+    "url": "https://github.com/yourusername/kodex.git"
   },
   "bugs": {
-    "url": "https://github.com/yourusername/kanedocs/issues"
+    "url": "https://github.com/yourusername/kodex/issues"
   },
   "keywords": [
     "documentation",
@@ -21,7 +21,8 @@
     "ai-generation",
     "astro",
     "react",
-    "typescript"
+    "typescript",
+    "kodex"
   ],
   "scripts": {
     "dev": "astro dev",
